2025-03-09  Araki Ken  <arakiken@users.sf.net>

	* README, doc/en/README.{console|sdl2|win32}, doc/ja/README.win32,
	  PLATFORMS.old: Updated.

	* uitoolkit/wayland/*-protocol.[ch]: Updated by rescanproto.sh.

2025-03-02  Araki Ken  <arakiken@users.sf.net>

	* ci.yml:
	  - build-msys2 -> build-mingw, build-msys2-with-mosh -> build-mingw-with-mosh,
	  - Add build-msys2.

	* README, README.beos: Updated.

	* config.sub, config.guess: Updated.

2025-03-01  Araki Ken  <arakiken@users.sf.net>

	* cocoatouch.m: Fix compiling error in old Xcode (3.2.6).

	* doc/en/README.{android|ssh|win32}, doc/ja/README.win32, Usage.win32:
	  Updated.

2025-02-24  Araki Ken  <arakiken@users.sf.net>

	* ci.yml: Add build-linux-min.

	* vt_termcap.c: Fix memory leaks in TEST_vt_termcap().

	* vt_shape.c: Add TEST_vt_shape().

	* test.c: Execute TEST_vt_shape() if BL_DEBUG is defined.

	* ui_main_config.[ch]: Change the type of parent_window from u_int to u_long.

2025-02-23  Araki Ken  <arakiken@users.sf.net>

	* vt_pty.h: OPEN_PTY_ASYNC is not defined in platforms except win32api
	  because executing xauth can freeze if OPEN_PTY_ASYNC is defined.

	* libptyssh/vt_pty_ssh.c: vt_search_ssh_session() doesn't return
	  suspended session.

	* cocoatouch.m:
	  - Show connection dialog in startup if libssh2 is supported.
	  - Add autocapitalizationType and keyboardType to MLTermView.

	* cocoa.[mh], cocoatouch.m:
	  cocoa_dialog_password() -> cocoa_dialog_connection().

	* README.cocoatouch: Updated.

	* configure.in: Define NO_XAUTH in building for iOS where
	  system() is probihited.

	* ci.yml: Add libssh2 to build-macos and build-ios.

2025-02-16  Araki Ken  <arakiken@users.sf.net>

	* ui_main_config.c: Add --clp/use_clipping option.

	* ui_draw_str.[ch]: Add ui_set_use_clipping().

2025-02-11  Araki Ken  <arakiken@users.sf.net>

	* vt_shape.c: Fix drawing glyphs in incorrect position.

	* doc/ja/README.*: Add "coding:euc-jp" to the header.

2025-02-09  Araki Ken  <arakiken@users.sf.net>
