@@ -290,13 +290,13 @@ jobs:
         with:
           msystem: UCRT64
           update: true
-          install: git make mingw-w64-ucrt-x86_64-toolchain mingw-w64-ucrt-x86_64-libssh2 mingw-w64-ucrt-x86_64-gtk3
+          install: git make mingw-w64-ucrt-x86_64-toolchain mingw-w64-ucrt-x86_64-libssh2 mingw-w64-ucrt-x86_64-gtk3 mingw-w64-ucrt-x86_64-SDL2
 
       - name: build
         run: |
           curl -L -O https://mlterm.sourceforge.net/vte-headers.tar.gz
           tar xzvf vte-headers.tar.gz -C D:/a/_temp/msys64/ucrt64
-          CFLAGS="-Wall -g -O2" ./configure --with-gui=win32
+          CFLAGS="-Wall -g -O2" ./configure --with-gui=win32,sdl2
           make
           DESTDIR=/tmp make install
           (cd gtk; sed 's/-luuid//g' Makefile > Makefile.2; mv Makefile.2 Makefile; make; DESTDIR=/tmp make install)
